[package]
name = "ph-eventing"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
description = "Lock-free SPSC event ring for high-throughput telemetry in embedded systems"
authors = ["Steven Giacomelli <steve@giacomelli.ca>"]
license = "MIT"
repository = "https://github.com/photon-circus/ph-eventing"
readme = "README.md"
keywords = ["embedded", "no-std", "lock-free", "spsc", "ring-buffer"]
categories = ["embedded", "no-std", "concurrency"]
publish = false

[dependencies]
