[package]
name = "ph-eventing"
version = "0.1.1"
edition = "2024"
rust-version = "1.92.0"
description = "Lock-free SPSC event ring for high-throughput telemetry in embedded systems"
authors = ["Steven Giacomelli <steve@giacomelli.ca>"]
license = "MIT"
repository = "https://github.com/photon-circus/ph-eventing"
readme = "README.md"
keywords = ["embedded", "no-std", "lock-free", "spsc", "ring-buffer"]
categories = ["embedded", "no-std", "concurrency"]
publish = true
exclude = [
    "CLAUDE.md",
    "CONTRIBUTING.md",
    ".cargo/*",
    ".github/*",
    ".idea/*",
]

[dependencies]
portable-atomic = { version = "1.13", optional = true, default-features = false, features = ["require-cas"] }

[features]
default = []
portable-atomic = ["dep:portable-atomic"]
portable-atomic-unsafe-assume-single-core = [
    "portable-atomic",
    "portable-atomic/unsafe-assume-single-core",
]
portable-atomic-critical-section = [
    "portable-atomic",
    "portable-atomic/critical-section",
]
